# packaging

./: pyproject.toml
.github/workflows/: test.yaml
package_for_poetry_testing/: argpars_learning.py  argpars_testing.py  data.json  load_json_data_to_mysql.py
