[tool.poetry]
name = "package_for_poetry_testing"
version = "0.1.0"
description = "A simple package with basic operations"
authors = ["Huzaifa Naeem <huzaifa.naeem@datumlabs.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pymysql = "^1.1.1"
readme-renderer = "^44.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
twine = "^6.0.1"
readme-renderer = "^44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
